modify blog index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,6 +31,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				<li>✖️标签</li>
 				<li>✖️评论区</li>
 				<li>✖️站内搜索</li>
+				<li>✖️增加分享</li>
 				<li>✔️RSS</li>
 			</ul>
 		</main>
