--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 				小屋还在完善过程中，当前基于<a href="https://astro.build/">astro</a>的blog模板改造，后续功能会逐渐加入：
 			</p>
 			<ul>
-				<li>✖️数学公式</li>
+				<li>✔️数学公式</li>
 				<li>✖️博文目录</li>
 				<li>✖️代码拷贝</li>
 				<li>✖️分类</li>
